Fixed white space and scroll error, fix texts

--- a/public/css/carrousel.css
+++ b/public/css/carrousel.css
@@ -39,7 +39,7 @@ right: 6vh;
 }
 #redes{
     position:relative;
-   
+   bottom: 20em;
 }
 
 
