--- a/public/css/header.css
+++ b/public/css/header.css
@@ -61,6 +61,9 @@
     justify-content: center;
     bottom: 0.5em;
   }
+  .ss:hover{
+    opacity: 0.7;
+  }
   
   .escudeto2 {
     position: relative;
